; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_w9968cf.c_w9968cf_write_sb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_w9968cf.c_w9968cf_write_sb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.w9968cf_device = type { i32 }

@W9968CF_I2C_BUS_DELAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.w9968cf_device*, i32)* @w9968cf_write_sb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @w9968cf_write_sb(%struct.w9968cf_device* %0, i32 %1) #0 {
  %3 = alloca %struct.w9968cf_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.w9968cf_device* %0, %struct.w9968cf_device** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.w9968cf_device*, %struct.w9968cf_device** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @w9968cf_write_reg(%struct.w9968cf_device* %6, i32 %7, i32 1)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @W9968CF_I2C_BUS_DELAY, align 4
  %10 = call i32 @udelay(i32 %9)
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @w9968cf_write_reg(%struct.w9968cf_device*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
